@@ -1,5 +1,7 @@
 2008-04-01  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* abbrev.el (abbrev-mode): Use define-minor-mode.
+
 	* mouse.el (mouse-major-mode-menu-prefix): Remove.  Remove uses.
 	(mouse-menu-non-singleton): Rename from mouse-major-mode-menu-1.
 	Use map-keymap.
